// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select should not render with invalid styles when also passed the disabled prop 1`] = `
.circuit-1 {
  color: #5C656F;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 40px;
  width: 40px;
  top: 1px;
  right: 1px;
  padding: 12px;
}

.circuit-2 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

label > .circuit-2,
label + .circuit-2 {
  margin-top: 4px;
}

.circuit-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFFFFF;
  outline: none;
  border: 0;
  border-radius: 8px;
  box-shadow: none;
  color: #212933;
  padding-top: calc(8px + 1px);
  padding-right: 32px;
  padding-bottom: calc(8px + 1px);
  padding-left: 12px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  font-size: 16px;
  line-height: 24px;
  box-shadow: 0 0 0 1px #DB4D4D;
}

.circuit-0:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #DB4D4D;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #DB4D4D;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #DB4D4D;
}

<div
  class="circuit-2"
  disabled=""
>
  <select
    class="circuit-0"
    disabled=""
    id="select_5"
  >
    <option
      value=""
    >
      Select an option
    </option>
    <option
      value="1"
    >
      Option 1
    </option>
    <option
      value="2"
    >
      Option 2
    </option>
    <option
      value="3"
    >
      Option 3
    </option>
  </select>
  <svg
    class="circuit-1"
    fill="none"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M8.707 1.293a1 1 0 00-1.414 0l-3 3a1 1 0 001.414 1.414L8 3.414l2.293 2.293a1 1 0 101.414-1.414l-3-3zm3 10.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 111.414-1.414L8 12.586l2.293-2.293a1 1 0 111.414 1.414z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`Select should render with a label 1`] = `
.circuit-3 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

label > .circuit-3,
label + .circuit-3 {
  margin-top: 4px;
}

.circuit-1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFFFFF;
  outline: none;
  border: 0;
  border-radius: 8px;
  box-shadow: none;
  color: #212933;
  padding-top: calc(8px + 1px);
  padding-right: 32px;
  padding-bottom: calc(8px + 1px);
  padding-left: 12px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  font-size: 16px;
  line-height: 24px;
  box-shadow: 0 0 0 1px #9DA7B1;
}

.circuit-1:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-1:hover {
  box-shadow: 0 0 0 1px #5C656F;
}

.circuit-1:focus {
  box-shadow: 0 0 0 2px #3388FF;
}

.circuit-1:active {
  box-shadow: 0 0 0 1px #3388FF;
}

.circuit-2 {
  color: #5C656F;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 40px;
  width: 40px;
  top: 1px;
  right: 1px;
  padding: 12px;
}

.circuit-4 {
  font-size: 13px;
  line-height: 20px;
  display: block;
}

<label
  class="circuit-4"
  for="select_2"
>
  <span
    class="circuit-0"
  >
    Label
  </span>
  <div
    class="circuit-3"
  >
    <select
      class="circuit-1"
      id="select_2"
    >
      <option
        value=""
      >
        Select an option
      </option>
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-2"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M8.707 1.293a1 1 0 00-1.414 0l-3 3a1 1 0 001.414 1.414L8 3.414l2.293 2.293a1 1 0 101.414-1.414l-3-3zm3 10.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 111.414-1.414L8 12.586l2.293-2.293a1 1 0 111.414 1.414z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</label>
`;

exports[`Select should render with a prefix when passed the prefix prop 1`] = `
.circuit-2 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

label > .circuit-2,
label + .circuit-2 {
  margin-top: 4px;
}

.circuit-1 {
  color: #5C656F;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 40px;
  width: 40px;
  top: 1px;
  right: 1px;
  padding: 12px;
}

.circuit-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFFFFF;
  outline: none;
  border: 0;
  border-radius: 8px;
  box-shadow: none;
  color: #212933;
  padding-top: calc(8px + 1px);
  padding-right: 32px;
  padding-bottom: calc(8px + 1px);
  padding-left: 12px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  font-size: 16px;
  line-height: 24px;
  padding-left: 40px;
  box-shadow: 0 0 0 1px #9DA7B1;
}

.circuit-0:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #5C656F;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #3388FF;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #3388FF;
}

<div
  class="circuit-2"
>
  <div
    style="width: 24px; height: 24px;"
  />
  <select
    class="circuit-0"
    id="select_9"
  >
    <option
      value=""
    >
      Select an option
    </option>
    <option
      value="1"
    >
      Option 1
    </option>
    <option
      value="2"
    >
      Option 2
    </option>
    <option
      value="3"
    >
      Option 3
    </option>
  </select>
  <svg
    class="circuit-1"
    fill="none"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M8.707 1.293a1 1 0 00-1.414 0l-3 3a1 1 0 001.414 1.414L8 3.414l2.293 2.293a1 1 0 101.414-1.414l-3-3zm3 10.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 111.414-1.414L8 12.586l2.293-2.293a1 1 0 111.414 1.414z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`Select should render with a tooltip when passed a validation hint 1`] = `
.circuit-3 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

label > .circuit-3,
label + .circuit-3 {
  margin-top: 4px;
}

.circuit-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFFFFF;
  outline: none;
  border: 0;
  border-radius: 8px;
  box-shadow: none;
  color: #212933;
  padding-top: calc(8px + 1px);
  padding-right: 32px;
  padding-bottom: calc(8px + 1px);
  padding-left: 12px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  font-size: 16px;
  line-height: 24px;
  box-shadow: 0 0 0 1px #9DA7B1;
}

.circuit-0:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #5C656F;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #3388FF;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #3388FF;
}

.circuit-1 {
  color: #5C656F;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 40px;
  width: 40px;
  top: 1px;
  right: 1px;
  padding: 12px;
}

.circuit-2 {
  font-size: 13px;
  line-height: 20px;
  display: block;
  margin-top: 4px;
}

<div
  class="circuit-3"
>
  <select
    class="circuit-0"
    id="select_8"
  >
    <option
      value=""
    >
      Select an option
    </option>
    <option
      value="1"
    >
      Option 1
    </option>
    <option
      value="2"
    >
      Option 2
    </option>
    <option
      value="3"
    >
      Option 3
    </option>
  </select>
  <svg
    class="circuit-1"
    fill="none"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M8.707 1.293a1 1 0 00-1.414 0l-3 3a1 1 0 001.414 1.414L8 3.414l2.293 2.293a1 1 0 101.414-1.414l-3-3zm3 10.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 111.414-1.414L8 12.586l2.293-2.293a1 1 0 111.414 1.414z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
  <span
    class="circuit-2"
  >
    This field is required.
  </span>
</div>
`;

exports[`Select should render with default styles 1`] = `
.circuit-2 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

label > .circuit-2,
label + .circuit-2 {
  margin-top: 4px;
}

.circuit-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFFFFF;
  outline: none;
  border: 0;
  border-radius: 8px;
  box-shadow: none;
  color: #212933;
  padding-top: calc(8px + 1px);
  padding-right: 32px;
  padding-bottom: calc(8px + 1px);
  padding-left: 12px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  font-size: 16px;
  line-height: 24px;
  box-shadow: 0 0 0 1px #9DA7B1;
}

.circuit-0:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #5C656F;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #3388FF;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #3388FF;
}

.circuit-1 {
  color: #5C656F;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 40px;
  width: 40px;
  top: 1px;
  right: 1px;
  padding: 12px;
}

<div
  class="circuit-2"
>
  <select
    class="circuit-0"
    id="select_1"
  >
    <option
      value=""
    >
      Select an option
    </option>
    <option
      value="1"
    >
      Option 1
    </option>
    <option
      value="2"
    >
      Option 2
    </option>
    <option
      value="3"
    >
      Option 3
    </option>
  </select>
  <svg
    class="circuit-1"
    fill="none"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M8.707 1.293a1 1 0 00-1.414 0l-3 3a1 1 0 001.414 1.414L8 3.414l2.293 2.293a1 1 0 101.414-1.414l-3-3zm3 10.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 111.414-1.414L8 12.586l2.293-2.293a1 1 0 111.414 1.414z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`Select should render with disabled styles when passed the disabled prop 1`] = `
.circuit-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFFFFF;
  outline: none;
  border: 0;
  border-radius: 8px;
  box-shadow: none;
  color: #212933;
  padding-top: calc(8px + 1px);
  padding-right: 32px;
  padding-bottom: calc(8px + 1px);
  padding-left: 12px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  font-size: 16px;
  line-height: 24px;
  box-shadow: 0 0 0 1px #9DA7B1;
}

.circuit-0:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #5C656F;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #3388FF;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #3388FF;
}

.circuit-1 {
  color: #5C656F;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 40px;
  width: 40px;
  top: 1px;
  right: 1px;
  padding: 12px;
}

.circuit-2 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

label > .circuit-2,
label + .circuit-2 {
  margin-top: 4px;
}

<div
  class="circuit-2"
  disabled=""
>
  <select
    class="circuit-0"
    disabled=""
    id="select_3"
  >
    <option
      value=""
    >
      Select an option
    </option>
    <option
      value="1"
    >
      Option 1
    </option>
    <option
      value="2"
    >
      Option 2
    </option>
    <option
      value="3"
    >
      Option 3
    </option>
  </select>
  <svg
    class="circuit-1"
    fill="none"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M8.707 1.293a1 1 0 00-1.414 0l-3 3a1 1 0 001.414 1.414L8 3.414l2.293 2.293a1 1 0 101.414-1.414l-3-3zm3 10.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 111.414-1.414L8 12.586l2.293-2.293a1 1 0 111.414 1.414z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`Select should render with inline styles when passed the inline prop 1`] = `
.circuit-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFFFFF;
  outline: none;
  border: 0;
  border-radius: 8px;
  box-shadow: none;
  color: #212933;
  padding-top: calc(8px + 1px);
  padding-right: 32px;
  padding-bottom: calc(8px + 1px);
  padding-left: 12px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  font-size: 16px;
  line-height: 24px;
  box-shadow: 0 0 0 1px #9DA7B1;
}

.circuit-0:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #5C656F;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #3388FF;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #3388FF;
}

.circuit-1 {
  color: #5C656F;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 40px;
  width: 40px;
  top: 1px;
  right: 1px;
  padding: 12px;
}

.circuit-2 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
  display: inline-block;
  margin-right: 16px;
}

label > .circuit-2,
label + .circuit-2 {
  margin-top: 4px;
}

<div
  class="circuit-2"
>
  <select
    class="circuit-0"
    id="select_6"
  >
    <option
      value=""
    >
      Select an option
    </option>
    <option
      value="1"
    >
      Option 1
    </option>
    <option
      value="2"
    >
      Option 2
    </option>
    <option
      value="3"
    >
      Option 3
    </option>
  </select>
  <svg
    class="circuit-1"
    fill="none"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M8.707 1.293a1 1 0 00-1.414 0l-3 3a1 1 0 001.414 1.414L8 3.414l2.293 2.293a1 1 0 101.414-1.414l-3-3zm3 10.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 111.414-1.414L8 12.586l2.293-2.293a1 1 0 111.414 1.414z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`Select should render with invalid styles when passed the invalid prop 1`] = `
.circuit-3 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

label > .circuit-3,
label + .circuit-3 {
  margin-top: 4px;
}

.circuit-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFFFFF;
  outline: none;
  border: 0;
  border-radius: 8px;
  box-shadow: none;
  color: #212933;
  padding-top: calc(8px + 1px);
  padding-right: 32px;
  padding-bottom: calc(8px + 1px);
  padding-left: 12px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  font-size: 16px;
  line-height: 24px;
  padding-right: 56px;
  box-shadow: 0 0 0 1px #DB4D4D;
}

.circuit-0:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #DB4D4D;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #DB4D4D;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #DB4D4D;
}

.circuit-1 {
  color: #5C656F;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 40px;
  width: 40px;
  top: 1px;
  right: 1px;
  padding: 12px;
  right: 24px;
}

.circuit-2 {
  color: #5C656F;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 40px;
  width: 40px;
  top: 1px;
  right: 1px;
  padding: 12px;
  color: #DB4D4D;
}

<div
  class="circuit-3"
>
  <select
    class="circuit-0"
    id="select_4"
  >
    <option
      value=""
    >
      Select an option
    </option>
    <option
      value="1"
    >
      Option 1
    </option>
    <option
      value="2"
    >
      Option 2
    </option>
    <option
      value="3"
    >
      Option 3
    </option>
  </select>
  <svg
    class="circuit-1"
    fill="none"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M8.707 1.293a1 1 0 00-1.414 0l-3 3a1 1 0 001.414 1.414L8 3.414l2.293 2.293a1 1 0 101.414-1.414l-3-3zm3 10.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 111.414-1.414L8 12.586l2.293-2.293a1 1 0 111.414 1.414z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
  <svg
    class="circuit-2"
    fill="none"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <g
      clip-path="url(#circle_cross_small_svg__clip0)"
    >
      <path
        clip-rule="evenodd"
        d="M2 8a6 6 0 1112 0A6 6 0 012 8zm6-8a8 8 0 100 16A8 8 0 008 0zM6.207 4.793a1 1 0 00-1.414 1.414L6.586 8 4.793 9.793a1 1 0 001.414 1.414L8 9.414l1.793 1.793a1 1 0 001.414-1.414L9.414 8l1.793-1.793a1 1 0 00-1.414-1.414L8 6.586 6.207 4.793z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </g>
    <defs>
      <clippath
        id="circle_cross_small_svg__clip0"
      >
        <path
          d="M0 0h16v16H0V0z"
          fill="#fff"
        />
      </clippath>
    </defs>
  </svg>
</div>
`;

exports[`Select should render with no margin styles when passed the noMargin prop 1`] = `
.circuit-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFFFFF;
  outline: none;
  border: 0;
  border-radius: 8px;
  box-shadow: none;
  color: #212933;
  padding-top: calc(8px + 1px);
  padding-right: 32px;
  padding-bottom: calc(8px + 1px);
  padding-left: 12px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  font-size: 16px;
  line-height: 24px;
  box-shadow: 0 0 0 1px #9DA7B1;
}

.circuit-0:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #5C656F;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #3388FF;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #3388FF;
}

.circuit-1 {
  color: #5C656F;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 40px;
  width: 40px;
  top: 1px;
  right: 1px;
  padding: 12px;
}

.circuit-2 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
  margin-bottom: 0;
}

label > .circuit-2,
label + .circuit-2 {
  margin-top: 4px;
}

<div
  class="circuit-2"
>
  <select
    class="circuit-0"
    id="select_7"
  >
    <option
      value=""
    >
      Select an option
    </option>
    <option
      value="1"
    >
      Option 1
    </option>
    <option
      value="2"
    >
      Option 2
    </option>
    <option
      value="3"
    >
      Option 3
    </option>
  </select>
  <svg
    class="circuit-1"
    fill="none"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M8.707 1.293a1 1 0 00-1.414 0l-3 3a1 1 0 001.414 1.414L8 3.414l2.293 2.293a1 1 0 101.414-1.414l-3-3zm3 10.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 111.414-1.414L8 12.586l2.293-2.293a1 1 0 111.414 1.414z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;
